@@ -17,7 +17,7 @@ class DatabaseObjectComparatorComparator implements Comparator<DatabaseObjectCom
 
     @Override
     public int compare(DatabaseObjectComparator o1, DatabaseObjectComparator o2) {
-        int result = -1 * new Integer(o1.getPriority(objectType, database)).compareTo(o2.getPriority(objectType, database));
+        int result = -1 * Integer.valueOf(o1.getPriority(objectType, database)).compareTo(o2.getPriority(objectType, database));
         if (result == 0) {
             return o1.getClass().getName().compareTo(o2.getClass().getName());
         }
