@@ -1,30 +1,39 @@
 package liquibase.structure;
 
+import liquibase.configuration.LiquibaseConfiguration;
 import liquibase.exception.UnexpectedLiquibaseException;
 import liquibase.parser.core.ParsedNode;
 import liquibase.parser.core.ParsedNodeException;
 import liquibase.resource.ResourceAccessor;
 import liquibase.serializer.LiquibaseSerializable;
 import liquibase.structure.core.Column;
+import liquibase.structure.core.Schema;
 import liquibase.util.ISODateFormat;
 import liquibase.util.ObjectUtil;
-import liquibase.util.StringUtils;
+import liquibase.util.StringUtil;
 
-import java.lang.reflect.InvocationTargetException;
-import java.text.ParseException;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+/**
+ * Template class for all types of database objects can be manipulated using ChangeSets. Objects represented by
+ * subclasses are not specific to any RDBMS and thus only contain "high-level" properties that can be found in most
+ * DBMS. Examples for things that are represented are {@link liquibase.structure.core.Table},
+ * {@link liquibase.structure.core.PrimaryKey} and {@link liquibase.structure.core.Column}.
+ * <p/>
+ * Core features of this class include the functionality for the attributes collection ( {@link #getAttributes()} }
+ * and the ability to load an object from a serialised form {@link #load(ParsedNode, ResourceAccessor)} .
+ */
 public abstract class AbstractDatabaseObject implements DatabaseObject {
 
-    private Map<String, Object> attributes = new HashMap<String, Object>();
+    private Map<String, Object> attributes = new HashMap<>();
 
     private String snapshotId;
 
     @Override
     public String getObjectTypeName() {
-        return StringUtils.lowerCaseFirst(getClass().getSimpleName());
+        return StringUtil.lowerCaseFirst(getClass().getSimpleName());
     }
 
     @Override
@@ -47,7 +56,40 @@ public abstract class AbstractDatabaseObject implements DatabaseObject {
 
     @Override
     public int compareTo(Object o) {
-        return this.getName().compareTo(((AbstractDatabaseObject) o).getName());
+        AbstractDatabaseObject that = (AbstractDatabaseObject) o;
+        if ((this.getSchema() != null) && (that.getSchema() != null)) {
+            if (shouldIncludeCatalogInSpecification()) {
+                String thisCatalogName = this.getSchema().getCatalogName();
+                String thatCatalogName = that.getSchema().getCatalogName();
+
+                if (thisCatalogName != null && thatCatalogName != null) {
+                    int compare = thisCatalogName.compareToIgnoreCase(thatCatalogName);
+                    if (compare != 0) {
+                        return compare;
+                    }
+                } else if (thisCatalogName != null) {
+                    return 1;
+                } else if (thatCatalogName != null) {
+                    return -1;
+                } // if they are both null, it will continue with rest
+            }
+            // now compare schema name
+            int compare = StringUtil.trimToEmpty(this.getSchema().getName()).compareToIgnoreCase(StringUtil.trimToEmpty(that.getSchema().getName()));
+            if (compare != 0) {
+                return compare;
+            }
+        }
+
+        String thisName = this.getName();
+        String thatName = that.getName();
+        if (thisName != null && thatName != null) {
+            return thisName.compareTo(thatName);
+        } else if (thisName != null) {
+            return 1;
+        } else if (thatName != null) {
+            return -1;
+        }
+        return 0;
     }
 
     @Override
@@ -56,11 +98,13 @@ public abstract class AbstractDatabaseObject implements DatabaseObject {
     }
 
     @Override
+    @SuppressWarnings("unchecked")
     public <T> T getAttribute(String attribute, Class<T> type) {
         return (T) attributes.get(attribute);
     }
 
     @Override
+    @SuppressWarnings("unchecked")
     public <T> T getAttribute(String attribute, T defaultValue) {
         T value = (T) attributes.get(attribute);
         if (value == null) {
@@ -96,30 +140,35 @@ public abstract class AbstractDatabaseObject implements DatabaseObject {
 
     @Override
     public Set<String> getSerializableFields() {
-        TreeSet<String> fields = new TreeSet<String>(attributes.keySet());
+        TreeSet<String> fields = new TreeSet<>(attributes.keySet());
         fields.add("snapshotId");
         return fields;
     }
 
     @Override
     public Object getSerializableFieldValue(String field) {
-        if (field.equals("snapshotId")) {
+        if ("snapshotId".equals(field)) {
             return snapshotId;
         }
         if (!attributes.containsKey(field)) {
-            throw new UnexpectedLiquibaseException("Unknown field "+field);
+            throw new UnexpectedLiquibaseException("Unknown field " + field);
         }
         Object value = attributes.get(field);
-        if (value instanceof DatabaseObject) {
-            try {
-                DatabaseObject clone = (DatabaseObject) value.getClass().newInstance();
+        try {
+            if (value instanceof Schema) {
+                Schema clone = new Schema(((Schema) value).getCatalogName(), ((Schema) value).getName());
+                clone.setSnapshotId(((DatabaseObject) value).getSnapshotId());
+                return clone;
+            } else if (value instanceof DatabaseObject) {
+                DatabaseObject clone = (DatabaseObject) value.getClass().getConstructor().newInstance();
                 clone.setName(((DatabaseObject) value).getName());
                 clone.setSnapshotId(((DatabaseObject) value).getSnapshotId());
                 return clone;
-            } catch (Exception e) {
-                throw new UnexpectedLiquibaseException(e);
             }
+        } catch (Exception e) {
+            throw new UnexpectedLiquibaseException(e);
         }
+
         return value;
     }
 
@@ -136,20 +185,21 @@ public abstract class AbstractDatabaseObject implements DatabaseObject {
     public void load(ParsedNode parsedNode, ResourceAccessor resourceAccessor) throws ParsedNodeException {
         for (ParsedNode child : parsedNode.getChildren()) {
             String name = child.getName();
-            if (name.equals("snapshotId")) {
+            if ("snapshotId".equals(name)) {
                 this.snapshotId = child.getValue(String.class);
                 continue;
             }
 
             Class propertyType = ObjectUtil.getPropertyType(this, name);
-            if (propertyType != null && Collection.class.isAssignableFrom(propertyType) && !(child.getValue() instanceof Collection)) {
+            if ((propertyType != null) && Collection.class.isAssignableFrom(propertyType) && !(child.getValue()
+                instanceof Collection)) {
                 if (this.attributes.get(name) == null) {
                     this.setAttribute(name, new ArrayList<Column>());
                 }
                 this.getAttribute(name, List.class).add(child.getValue());
             } else {
                 Object childValue = child.getValue();
-                if (childValue != null && childValue instanceof String) {
+                if ((childValue != null) && (childValue instanceof String)) {
                     Matcher matcher = Pattern.compile("(.*)!\\{(.*)\\}").matcher((String) childValue);
                     if (matcher.matches()) {
                         String stringValue = matcher.group(1);
@@ -159,7 +209,7 @@ public abstract class AbstractDatabaseObject implements DatabaseObject {
                                 Date date = new ISODateFormat().parse(stringValue);
                                 childValue = aClass.getConstructor(long.class).newInstance(date.getTime());
                             } else if (Enum.class.isAssignableFrom(aClass)) {
-                                childValue = Enum.valueOf((Class<? extends Enum>)aClass, stringValue);
+                                childValue = Enum.valueOf((Class<? extends Enum>) aClass, stringValue);
                             } else {
                                 childValue = aClass.getConstructor(String.class).newInstance(stringValue);
                             }
@@ -182,5 +232,15 @@ public abstract class AbstractDatabaseObject implements DatabaseObject {
     @Override
     public String toString() {
         return getName();
+    }
+
+    /**
+     * Convenience method to check if the object types should consider catalog name
+     * also during comparision (equals(), hashcode() and compareTo())
+     *
+     * @return
+     */
+    public boolean shouldIncludeCatalogInSpecification() {
+        return LiquibaseConfiguration.getInstance().shouldIncludeCatalogInSpecification();
     }
 }
